--- a/util/lang/assets/proc_jp.json
+++ b/util/lang/assets/proc_jp.json
@@ -266,7 +266,8 @@
     "abbr_name": "ふっとばす無効",
     "full_name": "ふっとばす無効/耐性",
     "tooltip": null,
-    "format": "ふっとばす[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(mult)%脆弱性}][(block!=0&mult!=0){と}][(block==100){ストッパー}(block<100&block>0){(block)%アブソーバー}(block<0){(block)%強化}]",
+    "format": ["ふっとばす[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(mult)%脆弱性}]",
+      "[(block!=0&mult!=0){と}][(block==100){ストッパー}(block<100&block>0){(block)%アブソーバー}(block<0){(block)%強化}]"],
     "class": {
       "mult": {
         "name": "割合",
@@ -282,7 +283,8 @@
     "abbr_name": "止める無効",
     "full_name": "動きを止める無効/耐性",
     "tooltip": null,
-    "format": "動きを止める[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(_abs(mult))%脆弱性}][(block!=0&mult!=0){と}][(block==100){ストッパー}(block<100&block>0){(block)%アブソーバー}(block<0){(block)%強化}]",
+    "format": ["動きを止める[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(_abs(mult))%脆弱性}]",
+      "[(block!=0&mult!=0){と}][(block==100){ストッパー}(block<100&block>0){(block)%アブソーバー}(block<0){(block)%強化}]"],
     "class": {
       "mult": {
         "name": "割合",
@@ -298,7 +300,8 @@
     "abbr_name": "遅くする無効",
     "full_name": "動きを遅くする無効/耐性",
     "tooltip": null,
-    "format": "動きを遅くする[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(_abs(mult))%脆弱性}][(block!=0&mult!=0){と}][(block==100){ストッパー}(block<100&block>0){(block)%アブソーバー}(block<0){(block)%強化}]",
+    "format": ["動きを遅くする[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(_abs(mult))%脆弱性}]",
+      "[(block!=0&mult!=0){と}][(block==100){ストッパー}(block<100&block>0){(block)%アブソーバー}(block<0){(block)%強化}]"],
     "class": {
       "mult": {
         "name": "割合",
@@ -326,7 +329,9 @@
     "abbr_name": "攻撃力ダウン無効",
     "full_name": "攻撃力ダウン無効/耐性",
     "tooltip": null,
-    "format": "攻撃力ダウン[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(_abs(mult))%脆弱性}][(block!=0&mult!=0){と}][(block==100){ストッパー}(block<100&block>0){(block)%アブソーバー}(block<0){(block)%強化}]",
+    "format": ["攻撃力ダウン[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(_abs(mult))%脆弱性}]",
+      "[(block!=0&mult!=0){と}][(block==100){ストッパー}(block<100&block>0){(block)%アブソーバー}(block<0){(block)%強化}]",
+      "[(smartImu!=0){攻撃[(smartImu>0){デ}]バフにのみ抵抗する}]"],
     "class": {
       "mult": {
         "name": "割合",
@@ -335,6 +340,10 @@
       "block": {
         "name": "ストッパー",
         "tooltip": "100で攻撃力ダウンを完全にブロックします。100以下の正の数値では効果が減少します。"
+      },
+      "smartImu": {
+        "name": "無視する",
+        "tooltip": "0 = バフとデバフに耐性あり, 1 = 攻撃デバフにのみ耐性あり, -1 = 攻撃バフにのみ耐性あり"
       }
     }
   },
@@ -757,7 +766,9 @@
     "abbr_name": "毒無効",
     "full_name": "毒・火傷無効/耐性",
     "tooltip": null,
-    "format": "毒・火傷[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(_abs(mult))%脆弱性}][(block!=0&mult!=0){と}][(block==100){ストッパー}(block<100&block>0){(block)%アブソーバー}(block<0){(block)%強化}]",
+    "format": ["毒・火傷[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(_abs(mult))%脆弱性}]",
+      "[(block!=0&mult!=0){と}][(block==100){ストッパー}(block<100&block>0){(block)%アブソーバー}(block<0){(block)%強化}]",
+      "[(smartImu!=0){[(smartImu>0){痛い}(smartImu<0){癒し}]毒にのみ抵抗する}]"],
     "class": {
       "mult": {
         "name": "軽減割合",
@@ -766,6 +777,10 @@
       "block": {
         "name": "ストッパー",
         "tooltip": "100で毒・火傷を完全にブロックします。100以下の正の数値では効果が減少します。"
+      },
+      "smartImu": {
+        "name": "無視する",
+        "tooltip": "0 = バフとデバフに耐性あり, 1 = 痛い毒にのみ耐性がある, -1 = 癒し毒にのみ耐性がある"
       }
     }
   },
@@ -862,6 +877,50 @@
       "multi": {
         "name": "倍率",
         "tooltip": "倍率が20の場合、攻撃力の20%のダメージを与えます。負の値も可能です。"
+      }
+    }
+  },
+  "IMUARMOR": {
+    "abbr_name": "アーマー無効",
+    "full_name": "アーマーブレイク無効/耐性",
+    "tooltip": null,
+    "format": ["アーマーブレイク[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(_abs(mult))%脆弱性}]",
+      "[(block!=0&mult!=0){と}][(block==100){ストッパー}(block<100&block>0){(block)%アブソーバー}(block<0){(block)%強化}]",
+      "[(smartImu!=0){アーマー[(smartImu>0){デ}]バフにのみ抵抗する}]"],
+    "class": {
+      "mult": {
+        "name": "割合",
+        "tooltip": null
+      },
+      "block": {
+        "name": "ストッパー",
+        "tooltip": "100で攻撃力ダウンを完全にブロックします。100以下の正の数値では効果が減少します。"
+      },
+      "smartImu": {
+        "name": "無視する",
+        "tooltip": "0 = バフとデバフに耐性あり, 1 = アーマーデバフにのみ耐性あり, -1 = アーマーのバフにのみ耐性あり"
+      }
+    }
+  },
+  "IMUSPEED": {
+    "abbr_name": "軽率無効",
+    "full_name": "軽率無効/耐性",
+    "tooltip": null,
+    "format": ["軽率[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(_abs(mult))%脆弱性}]",
+      "[(block!=0&mult!=0){と}][(block==100){ストッパー}(block<100&block>0){(block)%アブソーバー}(block<0){(block)%強化}]",
+      "[(smartImu!=0){軽率[(smartImu>0){デ}]バフにのみ抵抗する}]"],
+    "class": {
+      "mult": {
+        "name": "割合",
+        "tooltip": null
+      },
+      "block": {
+        "name": "ストッパー",
+        "tooltip": "100で攻撃力ダウンを完全にブロックします。100以下の正の数値では効果が減少します。"
+      },
+      "smartImu": {
+        "name": "無視する",
+        "tooltip": "0 = バフとデバフに耐性あり, 1 = スピードデバフのみ耐性, -1 = スピードバフにのみ耐性を持つ"
       }
     }
   },
