--- a/util/lang/assets/animation_type_jp.json
+++ b/util/lang/assets/animation_type_jp.json
@@ -64,5 +64,12 @@
   },
   "DefEff": {
     "DEF": "デフォルト"
+  },
+  "ShieldEff": {
+    "FULL" : "full",
+    "HALF" : "half",
+    "BROKEN" : "broken",
+    "BREAKER" : "breaker",
+    "REGENERATION" : "regeneration"
   }
 }
