--- a/util/lang/assets/proc_kr.json
+++ b/util/lang/assets/proc_kr.json
@@ -771,5 +771,21 @@
                 "tooltip" : "발동자 데미지의 퍼센트로 작동합니다. 만약 값이 20 이면, 발동자 데미지의 20% 만큼 타겟에게 공격합니다. 음수도 허용됩니다"
             }
         }
+    },
+    "DEMONSHIELD" : {
+        "abbr_name" : "악마 쉴드",
+        "full_name" : "악마 쉴드",
+        "tooltip" : "일정 양의 데미지를 막아줍니다. 베리어처럼 체력보다 낮은 데미지를 무시하지 않으며 축적됩니다. 축적된 데미지가 체력을 넘기면 부숴집니다",
+        "format" : "악마 쉴드 (_left)(hp) 체력을 가지고 있고 히트백 시 원래 쉴드 체력의 (regen)% 만큼 회복(_right)",
+        "class" : {
+            "hp" : {
+                "name" : "체력",
+                "tooltip" : "쉴드의 체력입니다"
+            },
+            "regen" : {
+                "name" : "회복",
+                "tooltip" : "히트백시 원래 쉴드 체력의 몇 퍼센트로 회복될지 정합니다"
+            }
+        }
     }
 }
