--- a/util/lang/assets/proc_kr.json
+++ b/util/lang/assets/proc_kr.json
@@ -787,5 +787,17 @@
                 "tooltip" : "히트백시 원래 쉴드 체력의 몇 퍼센트로 회복될지 정합니다"
             }
         }
+    },
+    "SHIELDBREAK" : {
+        "abbr_name" : "쉴드",
+        "full_name" : "쉴드를 부순다",
+        "tooltip" : "쉴드를 즉시 파괴합니다. 이 능력은 히트백시 쉴드가 다시 회복되는 것을 막을 수 없으니 유의해 주세요",
+        "format" : "(prob)% 확률로 악마 쉴드를 부순다",
+        "class" : {
+            "prob" : {
+                "name" : "확률",
+                "tooltip" : "타겟에게 해당 능력을 발동시킬 확률입니다"
+            }
+        }
     }
 }
