--- a/util/lang/assets/proc_kr.json
+++ b/util/lang/assets/proc_kr.json
@@ -922,5 +922,55 @@
                 "tooltip" : "When this is checked, procs from nullified attacks will also be negated. Only works if 'nullify damage' is checked"
             }
         }
-    }
+    },
+    "BARRIER" : {
+        "abbr_name" : "barrier",
+        "full_name" : "Barrier",
+        "tooltip" : "Blocks all damage lower than the barrier's HP. Will break if an attack deals more damage than it's HP",
+        "format" : ["Barrier (_left)Barrier has (health) HP",
+            "[(regentime>0){, regenerates (_dispTime(regentime)) after being broken}]",
+            "[(timeout>0){, barrier breaks after (_dispTime(timeout))}](_right)"
+        ],
+        "class" : {
+            "health" : {
+                "name" : "Health",
+                "tooltip" : "Health of the barrier"
+            },
+            "regentime" : {
+                "name" : "Regeneration Time",
+                "tooltip" : "The entity's barrier will regenerate after a period of time passes. Set to 0 to deactivate this ability."
+            },
+            "timeout" : {
+                "name" : "Timeout",
+                "tooltip" : "The entity's barrier will break after a period of time passes. Set to 0 to deactivate this ability."
+            }
+        }
+    },
+    "DEMONSHIELD" : {
+        "abbr_name": "악마 쉴드",
+        "full_name": "악마 쉴드",
+        "tooltip": "일정 양의 데미지를 막아줍니다. 베리어처럼 체력보다 낮은 데미지를 무시하지 않으며 축적됩니다. 축적된 데미지가 체력을 넘기면 부숴집니다",
+        "format": "악마 쉴드 (_left)(hp) 체력을 가지고 있고 히트백 시 원래 쉴드 체력의 (regen)% 만큼 회복(_right)",
+        "class": {
+            "hp": {
+                "name": "체력",
+                "tooltip": "쉴드의 체력입니다"
+            },
+            "regen": {
+                "name": "회복",
+                "tooltip": "히트백시 원래 쉴드 체력의 몇 퍼센트로 회복될지 정합니다"
+            }
+        }
+    },
+    "SHIELDBREAK" : {
+        "abbr_name" : "쉴드",
+        "full_name" : "쉴드를 부순다",
+        "tooltip" : "쉴드를 즉시 파괴합니다. 이 능력은 히트백시 쉴드가 다시 회복되는 것을 막을 수 없으니 유의해 주세요",
+        "format" : "(prob)% 확률로 악마 쉴드를 부순다",
+        "class" : {
+            "prob" : {
+                "name" : "확률",
+                "tooltip" : "타겟에게 해당 능력을 발동시킬 확률입니다"
+            }
+        }
 }
