--- a/util/lang/assets/proc.json
+++ b/util/lang/assets/proc.json
@@ -484,7 +484,7 @@
         "full_name": "Summon",
         "tooltip": null,
         "format": [
-            "(prob)% chance to summon a (mult)% [(!type.fix_buff){(_left)relative to summoner's buff(_right) }](_entity(id)) after (_dispTime(time)), ",
+            "(prob)% chance to summon a [(!type.fix_buff){(_summonMagnification(mult))}(type.fix_buff){(mult)}] (_entity(id)) after (_dispTime(time)), ",
             "one summoned (dis) range away from ",
             "[(type.on_kill|type.on_hit){each target}",
             "(!type.on_hit&!type.on_kill){the summoner}] ",
@@ -1039,7 +1039,7 @@
         "abbr_name" : "D.Shield",
         "full_name" : "Devil Shield",
         "tooltip" : "Blocks a certain amount of damage. Unlike barrier, it absorbs damage instead of negating it.",
-        "format" : "Demonic Shield (_left)Shield has (hp) HP, regenerates with (regen)% of its original HP when unit gets hitbacked(_right)",
+        "format" : "Demonic Shield (_left)Shield has (_shield(hp)) HP, regenerates with (regen)% of its original HP when unit gets hitbacked(_right)",
         "class" : {
             "hp" : {
                 "name" : "health",
