Fix JP DemonShield tooltip

--- a/util/lang/assets/proc_jp.json
+++ b/util/lang/assets/proc_jp.json
@@ -999,7 +999,7 @@
       }
     }
   },
-  "DSHIELD" : {
+  "DEMONSHIELD" : {
     "abbr_name" : "シールド",
     "full_name" : "悪魔シールド",
     "tooltip" : "一定量のダメージを遮断します。バリアとは異なり、ダメージを無効化するのではなく、吸収します。",
